--- a/sm/lib/gpc/CMakeLists.txt
+++ b/sm/lib/gpc/CMakeLists.txt
@@ -4,4 +4,8 @@ SET(gpc_sources
 	gpc_utils.c
 )
 
+if(MSVC)
+SET_SOURCE_FILES_PROPERTIES(${gpc_sources} PROPERTIES LANGUAGE CXX)
+endif(MSVC)
+
 ADD_LIBRARY(gpc STATIC  ${gpc_sources})
